Fix some layout issues on website

--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -271,7 +271,7 @@ img {
 }
 
 .sp-button-margin {
-	margin-bottom:20px;
+	margin-bottom:10px;
 }
 
 .container-header {
